<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFrag31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_one" />

        <TextView
            android:id="@+id/tvFrag32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fragment_two" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnFrag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
             />

    </LinearLayout>

