<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/tvSearchFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_search"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchFrag"
            android:hint="@string/enter_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnSearchFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />


</LinearLayout>