<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:gravity="center"
    tools:context=".fragments.OrdersFragment">

    <TextView
        android:id="@+id/tvOrdersFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_orders"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOrdersFrag"
            android:hint="@string/enter_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnOrdersFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>



