<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="@dimen/m_10"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/login_fragment"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/m_16"
            app:cardElevation="@dimen/m_10"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:padding="22dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t_20" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/t_16"
                    android:text="@string/user_name"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:padding="@dimen/m_16"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:padding="@dimen/t_12"
                    android:maxLines="1"
                    android:background="@drawable/bg_login"
                    android:id="@+id/et_l_username"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/t_16"
                    android:text="@string/password"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:padding="@dimen/m_16"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:padding="@dimen/t_12"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/bg_login"
                    android:id="@+id/et_l_password"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/t_16"
                    android:fontFamily="@font/open_sans_semibold"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:hint="@string/forgot_password"
                    android:padding="26dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn"
                    style="@style/ButtonStyle"
                    android:id="@+id/loginBtn"
                    android:text="@string/login"
                    android:fontFamily="@font/open_sans_semibold"
                    android:layout_marginBottom="@dimen/m_16"
                    android:textColor="@color/white"
                    android:textSize="@dimen/t_16"/>



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/m_16">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t_16"
                android:text="@string/don_t_have_an_account"
                android:fontFamily="@font/open_sans_semibold"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign"
                android:textColor="@color/black"
                android:id="@+id/don_t"
                android:padding="4dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/t_16"
                android:text="@string/sign_up"
                android:id="@+id/tv_sign_up"
                android:padding="4dp"
                android:fontFamily="@font/open_sans_semibold"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"

                />

        </LinearLayout>

    </LinearLayout>
